--- a/search-bar.css
+++ b/search-bar.css
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid gray;
+  border: 1px solid rgb(255, 255, 255);
   color: rgb(58, 58, 58);
   width: 500px;
   height: 45px;
   border-radius: 23px;
   padding: 0px 20px;
+  box-shadow: 1px 1px 3px 1px rgb(219, 218, 218);
 }
 
 .search_bar input {
